# book_AMR

./: .gitignore  f120a.rviz  frames_2025-12-04_14.53.38.gv  frames_2025-12-07_12.23.16.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/amr_log/lib/amr_log/: amr_log
install/amr_log/share/amr_log/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/js0_teleop/lib/js0_teleop/: js0_teleop
log/: latest_build
src/amr_log/: package.xml  setup.cfg  setup.py
src/arrow_key_teleop/: package.xml  setup.cfg  setup.py
src/arrow_key_teleop/arrow_key_teleop/: teleop_arrow_key.py.save
src/final_approach_controller/: package.xml  setup.cfg  setup.py
src/iai_cylinder/: setup.cfg  setup.py
src/js0_teleop/: package.xml  setup.cfg  setup.py
src/my_scan_merger/: CMakeLists.txt  package.xml
src/my_scan_merger/src/: scan_merger.cpp
src/ros2_to_ros1_bridge/: package.xml  setup.cfg  setup.py
src/ros2_to_ros1_bridge/ros2_to_ros1_bridge/: ros2_cmd_vel_bridge.py  rover_odo_bridge.py
src/shelf_navigator/: setup.cfg  setup.py
src/shelf_navigator/config/: TOHAN.yaml  area_home.yaml  area_home2.yaml
src/trajectory_logger/: package.xml  setup.py
src/trajectory_logger/trajectory_logger/: trajectory_logger.py
src/udp_bridge/: setup.py
src/udp_bridge/launch/: udp_bridge.launch.py
src/udp_bridge/udp_bridge/: cmd_vel_receiver.py  navigation_goal_sender.py  wall_distance_sender.py
src/wall_ransac_initializer/: package.xml  setup.cfg  setup.py
src/wall_ransac_initializer/wall_ransac_initializer/: map_error_x.py
(+270 files in other folders)
