<?xml version="1.0"?>
<package format="3">
  <name>wall_ransac_initializer</name>
  <version>0.0.1</version>
  <description>RANSAC-based wall orientation initializer</description>

  <maintainer email="shota@example.com">shota</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>numpy</exec_depend>
  <export>
  <build_type>ament_python</build_type>
  </export>

</package>
